Fixing swagger issues.3
